BrainzPlayer: Fix track/artist name overflow
Long titles and long artist names/many names were not being cropped with an ellipsis as expected

--- a/listenbrainz/webserver/static/css/brainzplayer.less
+++ b/listenbrainz/webserver/static/css/brainzplayer.less
@@ -29,6 +29,7 @@
 	
 	.content{
 		display: flex;
+		overflow: hidden;
 		.cover-art{
 			min-width: @brainzplayer-height;
 			height: 100%;
